--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "tailwind": "^4.0.0"
+    "tailwindcss": "^4.1.17"
   }
 }
